1.1.0/_sources/developers_guide/ocean/generated/polaris.ocean.ice_shelf.SshForward.rst.txt
polaris.ocean.ice\_shelf.SshForward
===================================

.. currentmodule:: polaris.ocean.ice_shelf

.. autoclass:: SshForward

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~SshForward.__init__
      ~SshForward.add_dependency
      ~SshForward.add_horiz_mesh_input_file
      ~SshForward.add_init_input_file
      ~SshForward.add_input_file
      ~SshForward.add_model_config_options
      ~SshForward.add_namelist_file
      ~SshForward.add_output_file
      ~SshForward.add_property_check
      ~SshForward.add_streams_file
      ~SshForward.add_vert_coord_input_file
      ~SshForward.add_yaml_file
      ~SshForward.check_properties
      ~SshForward.compute_cell_count
      ~SshForward.constrain_resources
      ~SshForward.dynamic_model_config
      ~SshForward.get_horiz_mesh_filename
      ~SshForward.get_init_filename
      ~SshForward.get_vert_coord_filename
      ~SshForward.map_yaml_configs
      ~SshForward.map_yaml_options
      ~SshForward.map_yaml_streams
      ~SshForward.map_yaml_to_namelist
      ~SshForward.open_model_dataset
      ~SshForward.partition
      ~SshForward.process_inputs_and_outputs
      ~SshForward.run
      ~SshForward.runtime_setup
      ~SshForward.set_model_resources
      ~SshForward.set_resources
      ~SshForward.set_shared_config
      ~SshForward.setup
      ~SshForward.update_io_tasks_config
      ~SshForward.update_namelist_eos
      ~SshForward.update_namelist_pio
      ~SshForward.validate_baselines
      ~SshForward.work_path
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SshForward.cores
      ~SshForward.gpus
      ~SshForward.may_span_nodes
      ~SshForward.min_cores
      ~SshForward.min_gpus
      ~SshForward.component
      ~SshForward.config
      ~SshForward.input_data
      ~SshForward.logger
   
   